Added jib and nexus publish